--- a/emails/signup/subject.pug
+++ b/emails/signup/subject.pug
@@ -1,1 +1,1 @@
-= `Hi ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Registrierung abschließen`
