--- a/emails/signup/text.pug
+++ b/emails/signup/text.pug
@@ -1,1 +1,1 @@
-= `Hi ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
