--- a/emails/commentnew/text.pug
+++ b/emails/commentnew/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+=`Hallo ${name}, es gibt einen neuen Kommentar von ${author} zum Dienstplan ${instrument} (${orchestra}) der Kalenderwoche ${kw}(38) (${period}): "${comment}" Hier geht es zum DPL: ${link}`
