email template new comment

--- a/emails/commentnew/text.pug
+++ b/emails/commentnew/text.pug
@@ -1,1 +1,1 @@
-=`Hallo ${name}, es gibt einen neuen Kommentar von ${author} zum Dienstplan ${instrument} (${orchestra}) der Kalenderwoche ${kw}(38) (${period}): "${comment}" Hier geht es zum DPL: ${link}`
+=`Hallo ${name},  ${author} hat hat folgenden Kommentar zum Dienstplan ${instrument} (${orchestra}) für die Woche ${kw} (${period}) hinzugefügt: "${comment}" Hier geht es zum DPL: ${link}`
