--- a/emails/commentnew/html.pug
+++ b/emails/commentnew/html.pug
@@ -1,24 +1,32 @@
-if  scheduler
-  p Liebe/r Diensteinteiler/in,
-else
-  p Hallo #{name},
-p 
-  strong Es gibt einen neuen Komentar von #{author} im Dienstplan (#{orchestra}) für #{instrument}.
-p #{author} hat zum Diensplan für die Kalenderwoche #{kw} (#{period}) folgenden Kommentar hinzugefügt:
-div
-  i
-    strong #{comment}
-div(style='text-align: center;') Hier geht es zum Dienstplan mit allen Informationen: 
-  table
-    tr
-      td
-        a(href=link) Zum Dienstplan
-hr
-table 
-  tr 
-    td
-      img(src="cid:logo", alt="ODP")
-    td Das ist eine automatisch generierte Nachricht. 
-| Wenn du in der Zukunft keine E-Mails von der ODP App erhalten wills...
-p 
-  a(href="https://odp.bicsak.net") &#9838; odp.&#8492;icsak.net &#9836;
+- var dplColor = "#e3f2fd";    
+- var bgColors = [ '#ffc266', '#ffb3ff', '#ff9999', '#53c68c', '#66ccff', '#9966ff', '#666699', '#a3a3c2', '#00ffff' ];
+- var bgColorMessage = rowAuthor == -1 ? '#ffffff' : bgColors[rowAuthor];
+- var colorPrimary = '#007bff';
+html
+  head
+    meta(charset='UTF-8')
+    title Neuer Kommentar
+  body(bgcolor=dplColor style=`background-color: ${dplColor}; font-size: 12px;`)
+    if  scheduler
+      p Liebe/r Diensteinteiler/in,
+    else
+      p Hallo #{name},
+    p 
+      strong #{author} hat folgenden Komentar zum Dienstplan #{instrument} (#{orchestra}) für die Woche #{kw} (#{period}) hinzugefügt:
+    div(bgcolor=bgColorMessage style=`border: 2px solid red; margin: 12px 12px; padding: 10px; background-color: ${bgColorMessage}`)
+      i
+        strong #{comment}
+    div(style='text-align: center;') Hier geht es zum Dienstplan mit allen Informationen: 
+      table(align='center' style='margin-top: 12px')
+        tr
+          td(bgcolor=colorPrimary style=`background-color: ${colorPrimary}; border-color: #4c5764;border: 2px solid #ffffff;padding: 10px;text-align: center;`)
+            a(href=link style='display: block; color: #000000; font-size: 12px; text-decoration: none; text-transform: uppercase;') Zum Dienstplan
+    hr
+    table 
+      tr 
+        td(style='padding: 10px;')
+          img(style='height: auto;' height='32' width='32' src="cid:logo" alt="ODP")
+        td(style='font-size: 10px;') Das ist eine automatisch generierte Nachricht. 
+          | Wenn du in der Zukunft keine E-Mails von der ODP App erhalten wills...
+    p(style='text-align: center') 
+      a(href="https://odp.bicsak.net") &#9838; odp.&#8492;icsak.net &#9836;
