--- a/emails/commentnew/subject.pug
+++ b/emails/commentnew/subject.pug
@@ -1,1 +1,1 @@
-= `Neuer Kommentar von ${author} zum Dienstplan ${instrument} (${orchestra})`
+= `Neuer Kommentar zum Dienstplan ${instrument} (${orchestra})`
