--- a/emails/dplfinal/html.pug
+++ b/emails/dplfinal/html.pug
@@ -1,5 +1,4 @@
 p Hallo #{name},
-p Du hast dich eben für die Benutzung 
-| der ODP App registriert. Um den Vorgang abzuschließen, bestätige bitte deine Email-adresse 
-| unter folgendem Link: #{link}
-p Falls du dich nicht registriert hast, betrachte diese E-Mail als gegenstandlos.
+p Liebe/r DiensteinteilerIn,
+p Der Dienstplan für #{instrument} im #{orchestra} ist abgeschlossen 
+p und vom Orchesterbüro genehmigt worden.
