--- a/emails/dplrejected/text.pug
+++ b/emails/dplrejected/text.pug
@@ -1,1 +1,2 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Liebe/r DiensteinteilerIn, Das Orchesterbüro hat den eingereichten Dienstplan für ${instrument} im ${orchestra} für die Woche ${period} mit folgender Begründung abgelenht:
+${reason} Hier geht es zum Dienstplan: ${link}`
