--- a/emails/surveynew/html.pug
+++ b/emails/surveynew/html.pug
@@ -1,5 +1,3 @@
 p Hallo #{name},
-p Du hast dich eben für die Benutzung 
-| der ODP App registriert. Um den Vorgang abzuschließen, bestätige bitte deine Email-adresse 
-| unter folgendem Link: #{link}
-p Falls du dich nicht registriert hast, betrachte diese E-Mail als gegenstandlos.
+p Dein/e DiensteinteilerIn hat eine Umfrage zum Dienstplanentwurf ... erstellt
+p Bitte stimme mit Ja oder Nein über diesen Entwurf ab.
