--- a/emails/approvalnew/text.pug
+++ b/emails/approvalnew/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Hallo ${name}, Dienstplan eingereicht zur Genehmigung...`
