--- a/emails/commentnew/html.pug
+++ b/emails/commentnew/html.pug
@@ -26,7 +26,7 @@ html
       tr 
         td(style='padding: 10px;')
           img(style='height: auto;' height='32' width='32' src="cid:logo" alt="ODP")
-        td(style='font-size: 10px;') Das ist eine automatisch generierte Nachricht. 
-          | Wenn du in der Zukunft keine E-Mails von der ODP App erhalten wills...
+        td(style='font-size: 10px;') Das ist eine automatisch generierte Nachricht, bitte nicht antworten.
+          | Wenn du in der Zukunft keine E-Mails von der ODP App erhalten willst, kannst du deine Einstellungen in der App ändern.
     p(style='text-align: center') 
       a(href="https://odp.bicsak.net") &#9838; odp.&#8492;icsak.net &#9836;
