--- a/emails/dplrejected/html.pug
+++ b/emails/dplrejected/html.pug
@@ -1,5 +1,21 @@
-p Hallo #{name},
-p Du hast dich eben für die Benutzung 
-| der ODP App registriert. Um den Vorgang abzuschließen, bestätige bitte deine Email-adresse 
-| unter folgendem Link: #{link}
-p Falls du dich nicht registriert hast, betrachte diese E-Mail als gegenstandlos.
+- var dplColor = "#e3f2fd";    
+- var colorPrimary = '#007bff';
+html
+  head
+    meta(charset='UTF-8')
+    title Dienstplanvorschlag abgelehnt
+  body(bgcolor=dplColor style=`background-color: ${dplColor}; font-size: 12px;`)
+    p Liebe/r DiensteinteilerIn,
+    p Das Orchesterbüro hat den eingereichten Dienstplan von #{instrument} im #{orchestra} für die Woche #{kw} (#{period}) mit folgender Begründung abgelehnt:
+    p #{reason}
+    p Um alle Infos zu sehen und den DPL zu korrigieren, klicke hier:
+        a(href=link) Zum Dienstplan
+    hr
+    table 
+      tr 
+        td(style='padding: 10px;')
+          img(style='height: auto;' height='32' width='32' src="cid:logo" alt="ODP")
+        td(style='font-size: 10px;') Das ist eine automatisch generierte Nachricht. 
+          | Wenn du in der Zukunft keine E-Mails von der ODP App erhalten willst, kannst du deine Einstellungen in der App ändern.
+    p(style='text-align: center') 
+      a(href="https://odp.bicsak.net") &#9838; odp.&#8492;icsak.net &#9836;
