--- a/emails/surveycomplete/html.pug
+++ b/emails/surveycomplete/html.pug
@@ -1,5 +1,3 @@
-p Hallo #{name},
-p Du hast dich eben für die Benutzung 
-| der ODP App registriert. Um den Vorgang abzuschließen, bestätige bitte deine Email-adresse 
-| unter folgendem Link: #{link}
+p Liebe/r DiensteinteilerIn,
+p Die Umfrage für den Dienstplan ist abgeschlossen.
 p Falls du dich nicht registriert hast, betrachte diese E-Mail als gegenstandlos.
