--- a/emails/dplrejected/text.pug
+++ b/emails/dplrejected/text.pug
@@ -1,2 +1,1 @@
-= `Liebe/r DiensteinteilerIn, Das Orchesterbüro hat den eingereichten Dienstplan für ${instrument} im ${orchestra} für die Woche ${period} mit folgender Begründung abgelenht:
-${reason} Hier geht es zum Dienstplan: ${link}`
+= `Liebe/r DiensteinteilerIn, Das Orchesterbüro hat den eingereichten Dienstplan für ${instrument} im ${orchestra} für die Kalenderwoche ${kw} (${period}) mit folgender Begründung abgelenht: ${reason} Hier geht es zum Dienstplan: ${link}`
