--- a/emails/approvalnew/text.pug
+++ b/emails/approvalnew/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, Dienstplan eingereicht zur Genehmigung...`
+= `Hallo ${name}, Dienstplan ${instrument} eingereicht zur Genehmigung`
