--- a/emails/commentnew/html.pug
+++ b/emails/commentnew/html.pug
@@ -12,7 +12,7 @@ html
     else
       p Hallo #{name},
     p 
-      strong #{author} hat folgenden Komentar zum Dienstplan #{instrument} (#{orchestra}) für die Woche #{kw} (#{period}) hinzugefügt:
+      strong #{author} hat folgenden Komentar zum Dienstplan #{instrument} (#{orchestra}) für die Kalenderwoche #{kw} (#{period}) hinzugefügt:
     div(bgcolor=bgColorMessage style=`border: 2px solid red; margin: 12px 12px; padding: 10px; background-color: ${bgColorMessage}`)
       i
         strong #{comment}
@@ -22,6 +22,7 @@ html
           td(bgcolor=colorPrimary style=`background-color: ${colorPrimary}; border-color: #4c5764;border: 2px solid #ffffff;padding: 10px;text-align: center;`)
             a(href=link style='display: block; color: #000000; font-size: 12px; text-decoration: none; text-transform: uppercase;') Zum Dienstplan
     hr
+    p(style='text-align: center;font-weight: bold') #{orchestraFull}    
     table 
       tr 
         td(style='padding: 10px;')
