--- a/emails/surveydenied/html.pug
+++ b/emails/surveydenied/html.pug
@@ -1,2 +1,29 @@
-p Liebe/r DiensteinteilerIn,
-p ... hat den Dienstplanentwurf mit folgender Begründung abgelehnt
+- var dplColor = "#e3f2fd";    
+- var colorPrimary = '#007bff';
+- var bgColors = [ '#ffc266', '#ffb3ff', '#ff9999', '#53c68c', '#66ccff', '#9966ff', '#666699', '#a3a3c2', '#00ffff' ];
+html
+  head
+    meta(charset='UTF-8')
+    title Dienstplanvorschlag abgelehnt
+  body(bgcolor=dplColor style=`background-color: ${dplColor}; font-size: 12px;`)
+    p Liebe/r DiensteinteilerIn,
+    p 
+      strong #{member} hat den vorgeschlagenen Dienstplan der Fachgruppe #{instrument} für die Kalenderwoche #{kw} (#{period}) mit folgender Begründung abgelehnt:
+    div(bgcolor=bgColors[rowMember] style=`border: 2px solid red; margin: 12px 12px; padding: 10px; background-color: ${bgColors[rowMember]}`)
+      i
+        strong #{reason}    
+    div(style='text-align: center;') Um alle Infos zu sehen und den DPL zu korrigieren, klicke hier:
+      table(align='center' style='margin-top: 12px')
+        tr
+          td(bgcolor=colorPrimary style=`background-color: ${colorPrimary}; border-color: #4c5764;border: 2px solid #ffffff;padding: 10px;text-align: center;`)
+            a(href=link style='display: block; color: #000000; font-size: 12px; text-decoration: none; text-transform: uppercase;') Zum Dienstplan    
+    hr
+    p(style='text-align: center;font-weight: bold') #{orchestraFull}    
+    table 
+      tr 
+        td(style='padding: 10px;')
+          img(style='height: auto;' height='32' width='32' src="cid:logo" alt="ODP")
+        td(style='font-size: 10px;') Das ist eine automatisch generierte Nachricht. 
+          | Wenn du in der Zukunft keine E-Mails von der ODP App erhalten willst, kannst du deine Einstellungen in der App ändern.
+    p(style='text-align: center') 
+      a(href="https://odp.bicsak.net") &#9838; odp.&#8492;icsak.net &#9836;
