--- a/emails/surveydenied/text.pug
+++ b/emails/surveydenied/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Liebe/r DiensteinteilerIn, ${member} hat den eingereichten Dienstplan für ${instrument} im ${orchestra} für die Kalenderwoche ${kw} (${period}) mit folgender Begründung abgelenht: ${reason} Hier geht es zum Dienstplan: ${link}`
