email template survey complete,survey new

--- a/emails/dplfinal/text.pug
+++ b/emails/dplfinal/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Hallo ${name}, der Dienstplan der Fachgruppe ${instrument} für die Kalenderwoche ${kw} (${period}) ist vom Diensteinteiler veröffentlicht worden. Hier geht ers zum Dienstplan: ${link}`
