--- a/emails/surveycomplete/text.pug
+++ b/emails/surveycomplete/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Liebe/r DiensteinteilerIn, die Umfrage über den Dienstplanentwurf der Fachgruppe ${instrument} für die Kalenderwoche ${kw} (${period}) ist fertig. Hier geht es zum Dienstplan: ${link}`
