--- a/emails/surveynew/text.pug
+++ b/emails/surveynew/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Hallo ${name}, es gibt eine neue Umfrage über den Dienstplanentwurf ${instrument} für die Kalenderwoche ${kw} (${period}). Bitte mit Ja oder Nein abstimmen. Hier geht es zum Dienstplanentwurf: ${link}`
