dplfinal emails without pdf

--- a/emails/dplfinal/text.pug
+++ b/emails/dplfinal/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, der Dienstplan der Fachgruppe ${instrument} für die Kalenderwoche ${kw} (${period}) ist vom Diensteinteiler veröffentlicht worden. Hier geht ers zum Dienstplan: ${link}`
+= `Hallo ${name}, der Dienstplan der Fachgruppe ${instrument} für die Kalenderwoche ${kw} (${period}) ist ${approved ? 'mit Genehmigung vom Orchesterbüro': 'vom Diensteinteiler'} veröffentlicht worden. Hier geht es zum Dienstplan: ${link}`
