--- a/emails/dplchanged/text.pug
+++ b/emails/dplchanged/text.pug
@@ -1,1 +1,1 @@
-= `Hallo ${name}, um die Registrierung für ODP abzuschließen, bestätige bitte deine Email-adresse unter ${link}`
+= `Hallo ${name}, der Dienstplan der Fachgruppe ${instrument} für die Kalenderwoche ${kw} (${period}) ist geändert worden. Hier geht es zum Dienstplan: ${link}`
