--- a/emails/forgotpw/html.pug
+++ b/emails/forgotpw/html.pug
@@ -1,2 +1,20 @@
-p Hallo #{name},
-p Um dein Passwort zurückzusetzen, gehe zu folgendem Link: #{link}
+- var colorPrimary = '#007bff';
+- var dplColor = "#e3f2fd";    
+html
+  head
+    meta(charset='UTF-8')
+    title Passwort zurücksetzen
+  body(bgcolor=dplColor style=`background-color: ${dplColor}; font-size: 12px;`)
+    p Hallo #{name},    
+    div(style='text-align: center;') Um dein Passwort zurückzusetzen, gehe zu folgendem Link:
+    table(align='center' style='margin-top: 12px')
+        tr
+          td(bgcolor=colorPrimary style=`background-color: ${colorPrimary}; border-color: #4c5764;border: 2px solid #ffffff;padding: 10px;text-align: center;`)
+            a(href=link style='display: block; color: #000000; font-size: 12px; text-decoration: none; text-transform: uppercase;') Passwort zurücksetzen    
+    table 
+      tr 
+        td(style='padding: 10px;')
+          img(style='height: auto;' height='32' width='32' src="cid:logo" alt="ODP")
+        td(style='font-size: 10px;') Das ist eine automatisch generierte Nachricht. Bitte nicht antworten
+    p(style='text-align: center') 
+      a(href="https://odp.bicsak.net") &#9838; odp.&#8492;icsak.net &#9836;
